# AquaRegulator-server

./: .gitignore  CMakeLists.txt  README.md  REDIS_INTEGRATION.md  run.sh
config/: app_config.json
src/: CMakeLists.txt  main.cxx  post_build.sh
src/core/: configuration.cxx  configuration.hpp  logger.cxx  logger.hpp
src/domain/: telemetry_models.hpp
src/infrastructure/cache/: redis_client.hpp  redis_telemetry_cache.hpp  telemetry_cache.hpp
src/infrastructure/database/: mariadb_client.cxx  mariadb_client.hpp  telemetry_repository.cxx  telemetry_repository.hpp
src/infrastructure/sensors/: modbus_tcp.hpp  sensor_data.hpp
src/monitoring/: health_monitor.cxx  health_monitor.hpp
src/network/: server_listener_tcp.hpp
src/services/: data_manager.hpp  data_manager_redis.hpp
src/services/transport/: video_manager.cxx  video_manager.hpp
src/transport/: sensor_data_settings.hpp  tcp_data_sender.hpp
